--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "enzyme": "^2.9.1",
+    "enzyme-adapter-react-16": "^1.12.1",
     "react-scripts": "1.0.10",
     "react-test-renderer": "^15.6.1"
   },
